back-end/k8s/deployment.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: ev-chargers-backend
  labels:
    app.kubernetes.io/part-of: ev-chargers
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - ev-chargers-backend
        from:
          kind: ImageStreamTag
          namespace: ev-chargers
          name: 'ev-chargers-backend:latest'
    - type: ConfigChange
  replicas: 1
  selector:
    deploymentconfig: ev-chargers-backend
  template:
    metadata:
      labels:
        deploymentconfig: ev-chargers-backend
    spec:
      containers:
        - name: ev-chargers-backend
          image: ev-chargers/ev-chargers-backend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
