back-end/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ev-chargers-backend
  name: ev-chargers-backend
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ev-chargers-backend
