back-end/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ev-chargers-backend
  name: ev-chargers-backend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ev-chargers-backend
    weight: 100
